이미지 파일 경로 재배치 및 업데이트 로직 개선 (#738)
* refactor: File 엔티티에서 s3Key 제거 및 directoryPath 추가

* feat: 매핑 여부에 따른 분기 처리 로직 구현

* style: 더 이상 사용되지 않는 코드 제거

* refactor: 코드 일관성 및 범용성을 위해 String.format 사용

* refactor: 코드 일관성 및 범용성을 위해 String.format 사용

* refactor: 안정성을 위해 URI 클래스 사용